--- a/css/styles.css
+++ b/css/styles.css
@@ -1,1 +1,7 @@
+/*!
+ * FileMaker 2 Tableau
+ * Copyright (C) 2020 1-more-thing (http://www.1-more-thing.com)
+ * Licensed under GPLv3 (http://www.gnu.org/licenses/)
+ */
+
 [v-cloak] { display: none; }
